# openslide-python

./: .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  .rstcheck.cfg  CHANGELOG.md  CHANGELOG.txt  LICENSE.txt  MANIFEST.in  README.md  README.rst  README.txt  TODO.txt  build.py  pyproject.toml  pytest.ini  setup.py
.github/: ISSUE_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml  python-bump.md  release.md
.github/maintainer/: README.md  mkmaintainer.py  release.md  update-python.md
.github/workflows/: python.yml
doc/: conf.py  index.rst  jekyll_fix.py
examples/deepzoom/: WSGI_README  deepzoom-server.py  deepzoom-tile.py  deepzoom.wsgi  deepzoom_apache  deepzoom_multiserver.py  deepzoom_server.py  deepzoom_tile.py  deepzoom_wsgi.py
examples/deepzoom/licenses/: LICENSE.openseadragon-scalebar
examples/deepzoom/static/: OpenSeadragon.js  openseadragon-scalebar.js  openseadragon.js  openseadragon.min.js
examples/deepzoom/templates/: files.html  index.html  slide-fullpage.html  slide-multipane.html
openslide/: __init__.py  _convert.c  _convert.pyi  _version.py  deepzoom.py  lowlevel.py
tests/: __init__.py  common.py  test_base.py  test_deepzoom.py  test_imageslide.py  test_openslide.py  unopenable.tiff  unreadable.svs
tests/fixtures/: boxes.tiff  boxes_0.dcm  boxes_1.dcm  small.svs
